[package]
name = "historytodrivedb"
version = "0.1.0"
authors = ["aaron"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
calamine = "0.16.2"
postgres = { version = "0.18.1", features = ["with-chrono-0_4"] }
postgres_array = "0.10.0"